--- a/bin/MainDash.fxml
+++ b/bin/MainDash.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.effect.*?>
@@ -10,23 +11,31 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="800.0" style="-fx-background-color: #33D7FF;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainDashController">
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="800.0" style="-fx-background-color: #444444;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainDashController">
    <children>
-      <Gauge fx:id="rpmGauge" angleRange="200.0" layoutY="14.0" maxValue="8000.0" needleBehavior="OPTIMIZED" prefHeight="250.0" prefWidth="400.0" skinType="DIGITAL" smoothing="true" title="RPM" />
-      <Gauge fx:id="mphGauge" layoutX="427.0" layoutY="14.0" maxValue="155.0" prefHeight="250.0" prefWidth="400.0" skinType="DIGITAL" smoothing="true" title="MPH" />
-      <Gauge fx:id="tempGauge" layoutX="140.0" layoutY="339.0" maxValue="360.0" prefHeight="127.0" prefWidth="148.0" skinType="SIMPLE_DIGITAL" title="Tmp" />
-      <Gauge fx:id="throttleGauge" layoutX="353.0" layoutY="339.0" prefHeight="127.0" prefWidth="148.0" skinType="SIMPLE_DIGITAL" smoothing="true" title="Throttle" />
-      <Gauge fx:id="fuelGauge" layoutX="579.0" layoutY="339.0" prefHeight="127.0" prefWidth="148.0" skinType="SIMPLE_DIGITAL" title="Fuel" />
-      <Label fx:id="gear" layoutX="390.0" layoutY="93.0" text="N">
+      <Gauge fx:id="rpmGauge" angleRange="200.0" layoutY="14.0" maxValue="8000.0" needleBehavior="OPTIMIZED" prefHeight="250.0" prefWidth="400.0" skinType="MODERN" smoothing="true" title="RPM">
+         <foregroundPaint>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="TRANSPARENT" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </foregroundPaint></Gauge>
+      <Gauge fx:id="mphGauge" layoutX="427.0" layoutY="14.0" maxValue="155.0" prefHeight="250.0" prefWidth="400.0" skinType="MODERN" smoothing="true" title="MPH" />
+      <Gauge fx:id="tempGauge" layoutX="140.0" layoutY="339.0" maxValue="360.0" prefHeight="127.0" prefWidth="148.0" skinType="SPACE_X" title="Tmp" />
+      <Gauge fx:id="throttleGauge" layoutX="353.0" layoutY="339.0" prefHeight="127.0" prefWidth="148.0" skinType="SPACE_X" smoothing="true" title="Throttle" />
+      <Gauge fx:id="fuelGauge" layoutX="579.0" layoutY="339.0" prefHeight="127.0" prefWidth="148.0" skinType="SPACE_X" title="Fuel" />
+      <Label fx:id="gear" layoutX="390.0" layoutY="93.0" text="N" textFill="#9ddbe3fc">
          <font>
             <Font size="64.0" />
          </font>
       </Label>
-      <Circle id="g1" fx:id="g1" fill="#0b7215" layoutX="321.0" layoutY="24.0" radius="10.0" stroke="BLACK" strokeType="INSIDE">
+      <Circle id="g1" fx:id="g1" fill="#2f5d75" layoutX="321.0" layoutY="24.0" radius="10.0" stroke="BLACK" strokeType="INSIDE">
          <effect>
             <Lighting>
                <bumpInput>
-                  <Shadow />
+                  <Bloom />
                </bumpInput>
                <light>
                   <Light.Distant />
